<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Parkify! Where is my car?</string>
    <string name="scanning">Scanning for devices…</string>
    <string name="cars">Cars</string>
    <string name="select_device_long">All you have to do is select which is the Bluetooth device installed in your car and forget about where you parked.\nYou will need to keep your Bluetooth activated and at least one of GPS or WIFI.</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="button_scan">Scan for devices</string>
    <string name="remove_link">Remove link</string>
    <string name="activate_bluetooth">Activate Bluetooth</string>
    <string name="link_removed">Bluetooth device link removed</string>
    <string name="link_device">Link device</string>
    <string name="help">Help</string>
    <string name="donate">Donate</string>
    <string name="remove_location">Clear car location</string>
    <string name="remove_car_confirm">Remove car location?</string>
    <string name="delete_car">Delete car</string>
    <string name="clear_this_spot">Clear this possible spot</string>
    <string name="clear_all_spot">Clear all possible spots</string>
    <string name="delete_car_confirmation">Are you sure you want to delete this car?</string>
    <string name="position_waiting">Waiting for user position</string>
    <string name="car_not_found">Car\'s position has not been established</string>
    <string name="bt_not_available">Bluetooth is not available</string>
    <string name="bt_linked_to">Car location will be stored on disconnection from %1$s</string>
    <string name="car_was_here">Car was here %1$s</string>
    <string name="what_car_is_parked">What car is parked here?</string>
    <string name="did_you_park">Did you park here?</string>
    <string name="based_on_activity_recognition">It seems you stepped out of a vehicle here, based on motion recognition</string>
    <string name="car">Car</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="poll_location_debug" translatable="false">Poll location</string>

    <!-- Donations -->
    <string name="donation_intro">Subscribing with a small yearly amount helps us maintain this app and removes ads for you!</string>
    <string name="donation_1">1 euro</string>
    <string name="donation_2">2 euros</string>
    <string name="donation_5">5 euros</string>
    <string name="thanks">Thanks for your support! :)</string>
    <string name="purchase_account_error">You need a user account associated</string>
    <string name="pick_account">You must select an account in order to use this application</string>
    <string name="other">Other</string>

    <string name="car_name_select">Car name</string>
    <string name="edit">Edit</string>
    <string name="pick_color">Pick car\'s color</string>
    <string name="delete_error">Error while deleting car</string>
    <string name="gcm_error">Error retrieving device ID</string>
    <string name="add_car_no_bt">Add car without Bluetooth</string>
    <string name="login_error">Login error</string>
    <string name="permission_error">Permission needed!</string>
    <string name="sync_error">Error synchronizing</string>
    <string name="about_to_leave">About to be free!</string>
    <string name="about_to_leave_info">Someone is walking towards their car</string>
    <string name="check_internet">Check internet connection</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="edit_cars">Edit cars</string>
    <string name="position_not_set">Car position is not set. Long tap in the map to set manually</string>
    <string name="follow">Follow</string>
    <string name="share">Share location</string>
    <string name="no_cars">You didn\'t add a car yet!</string>
    <string name="add_car_instructions">Add a new car to get automatic parking updates</string>
    <string name="add">Add</string>

    <string name="and_remove_ads">And remove ads!</string>

    <string name="rating_message">You would really help us if you gave us a good rating in the Play Store :)</string>
    <string name="like_question">Do you like this app?</string>
    <string name="rate">Rate</string>

    <string name="invite_title">Invite your friends</string>
    <string name="invite_promo">Invite at least 3 Facebook friends and get rid of ads! :)</string>

    <string name="ask_just_parked">Did you just park?</string>
    <string name="location_stored">Location stored</string>
    <string name="free_spot">Available parking spot</string>
    <string name="free_spot_info">Somebody just left a free parking spot</string>
    <string name="long_click_instructions">Long click to set your car\'s position. Next time it will be automatic!</string>
    <string name="thanks_free_spot">You just left a free parking spot! Thanks! :)</string>
    <string name="car_location_registered">\"%s\" location registered at Parkify!</string>

    <string name="public_parking">Public parking</string>
    <string name="car_was_here_share">%1$s is parked here (%2$s)</string>
    <string name="terms_of_use">Terms of use</string>

    <string name="just_parked_channel_description">Parking event detected by Bluetooth</string>
    <string name="motion_recog_channel_description">Motion recognition events</string>

    <string name="location_channel_description">Location polling events</string>

    <string name="location_in_progress">Parking event</string>
    <string name="location_instructions">Parkify is getting your location</string>

    <string name="motion_recognition_in_progress">Motion recognition in progress</string>
    <string name="motion_recognition_instructions">Parkify will detect when you park</string>
    <string name="stop">Stop</string>

    <string name="open_the_app">You need to open the app</string>
    <string name="open_the_app_long">We are making some changes under the hood that requires that you open the app to continue. We promise it will be awesome in the future.<working> </working></string>

</resources>
