<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_link_device"
        android:title="@string/link_device"
        android:icon="@drawable/ic_action_headphones"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_display_help"
        android:title="@string/help"
        android:icon="@drawable/ic_action_help"
        android:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_donate"
        android:title="@string/donate"
        android:icon="@drawable/ic_action_favorite"
        android:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_remove_car"
        android:title="@string/remove_car"
        android:icon="@drawable/ic_action_remove"
        android:showAsAction="ifRoom" />
</menu>
