<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cahue="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="@dimen/default_padding"
    android:layout_marginRight="@dimen/default_padding"
    android:layout_marginBottom="@dimen/default_padding"
    cahue:cardBackgroundColor="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/large_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_padding"
            android:text="@string/cars"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/body_text_1" />

        <TextView
            android:id="@+id/title_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_device_long"
            android:textColor="@color/abc_secondary_text_material_light" />

        <Button
            android:id="@+id/enable_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/activate_bluetooth"
            android:theme="@style/CahueTheme.Button.Accent" />

    </LinearLayout>

</android.support.v7.widget.CardView>